Fixed flashing caret on ios devices

--- a/css/console.css
+++ b/css/console.css
@@ -107,11 +107,9 @@
 }
 
 .console-input {
-	outline: none;
 	position: fixed;
 	/* Hide behind navbar */
 	top: 0;
 	right: 0;
-	color: black;
 	opacity: 0;
 }
